--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,9 +1,9 @@
 api: MySpigotPluginAPI
 name: MySpigotPlugin
 main: plugin.spigot.defaulpackage.Main
-version: "3.2.1"
+version: "4.0.0"
 api-version: 1.16
-author: lucaacquafredda
+author: Luca Acquafredda & Alberto Rutigliano
 commands: 
    PlayerPos:
       description: Mostra le coordinate dei giocatori
@@ -13,7 +13,6 @@ commands:
       description: Mostra le coordinate salvate del server
       usage: "Uso: /Coords"
       permission: perm.general
-      
 permissions:
    perm.general:
       default: true
