--- a/bin/plugin.yml
+++ b/bin/plugin.yml
@@ -1,7 +1,7 @@
 api: MySpigotPluginAPI
 name: MySpigotPlugin
 main: plugin.spigot.defaulpackage.Main
-version: "4.0.0"
+version: "4.1.0"
 api-version: 1.16
 author: Luca Acquafredda & Alberto Rutigliano
 commands: 
@@ -12,6 +12,10 @@ commands:
    Coords:
       description: Mostra le coordinate salvate del server
       usage: "Uso: /Coords"
+      permission: perm.general
+   Joke:
+      description: Fai uno scherzo a un tuo amico
+      usage: "Uso: /Joke"
       permission: perm.general
 permissions:
    perm.general:
