--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="C:/dev/Minecraft Plugin Dev/Minecraft Spigot Server Plugin/BuildTools.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/dev/Minecraft Plugin Dev/Minecraft Spigot Server Plugin/spigot-1.16.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/dev/Minecraft Plugin Dev/Minecraft Spigot Server Plugin/Spigot/Spigot-API/target/spigot-api-1.16.5-R0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/dev/Minecraft Plugin Dev/Minecraft Spigot Server Plugin/spigot-1.17.jar"/>
+	<classpathentry kind="lib" path="C:/dev/Minecraft Plugin Dev/Minecraft Spigot Server Plugin/Spigot/Spigot-API/target/spigot-api-1.17-R0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
