--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>MySpigotPlugin</groupId>
   <artifactId>MySpigotPlugin</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>5.1.1</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
