--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>MySpigotPlugin</groupId>
   <artifactId>MySpigotPlugin</artifactId>
-  <version>6.2.0</version>
+  <version>6.2.1-Test</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
