--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Eclipse Core      
+.project
+
+# JDT-specific (Eclipse Java Development Tools)     
+.classpath
+
 # Compiled class file
 *.class
 
