--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 api: MySpigotPluginAPI
 name: MySpigotPlugin
-main: plugin.spigot.defaulpackage.Main
+main: plugin.spigot.defaultpackage.Main
 version: "6.2.2"
 api-version: 1.18
 author: Luca Acquafredda & Alberto Rutigliano
@@ -15,7 +15,7 @@ commands:
       permission: perm.general
    Joke:
       description: Fai uno scherzo a un tuo amico
-      usage: "Uso: /Joke"
+      usage: "Uso: /Joke [playername]"
       permission: perm.general
 permissions:
    perm.general:
