--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,25 +1,37 @@
 api: MySpigotPluginAPI
 name: MySpigotPlugin
 main: plugin.spigot.defaultpackage.Main
-version: "7.0.1"
+version: "7.0.2"
 api-version: 1.18
 author: Luca Acquafredda & Alberto Rutigliano
 commands: 
    PlayerPos:
       description: Mostra le coordinate dei giocatori
-      usage: "Uso: /PlayerPos [playername]"
+      usage: |
+        /playerpos - Mostra le coordinate di tutti i giocatori online
+        /playerpos [playerName] - Mostra le coordinate del giocatore selezionato
       permission: perm.general
    Coords:
-      description: Mostra le coordinate salvate del server
-      usage: "Uso: /Coords"
+      description: Mostra le coordinate salvate sul server
+      usage:  |
+        /coords - Mostra tutte le coordinate salvate sul server
+        /coords add <name> - Salva nuove coordinate "name" con posizione del giocatore
+        /coords remove <name> - Rimuovi coordinate "name" dal server
+        /coords get <name> - Mostra coordinate "name"
       permission: perm.general
    Joke:
       description: Fai uno scherzo a un tuo amico
-      usage: "Uso: /Joke [playername]"
+      usage:  |
+        /joke - Fai uno scherzo a tutti i giocatori online
+        /joke <creeper, creeper_hurt, enderman, witch, arrow> [playerName]
       permission: perm.general
    Track:
-      description: Traccia
-      usage: "Uso: /track [playername]"
+      description: Segui le coordinate (navigatore)
+      usage:  |
+        /track player <playerName> - Segui il giocatore <playerName>
+        /track location <locationName> - Segui delle coordinate salvate sul server
+        /track new <X> <Z> - Segui le coordinate X, Z
+        /track stop - Ferma il navigatore
       permission: perm.general
 permissions:
    perm.general:
