--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,9 +1,10 @@
 api: MySpigotPluginAPI
 name: MySpigotPlugin
 main: plugin.spigot.defaultpackage.Main
-version: "8.0.0"
+version: "8.2.0"
 api-version: 1.19
-author: Luca Acquafredda & Alberto Rutigliano
+authors: [Alberto Rutigliano, Luca Acquafredda]
+website: https://github.com/AlbertoRutigliano/MinecraftPluginDev
 commands: 
    PlayerPos:
       description: Mostra le coordinate dei giocatori
@@ -32,6 +33,15 @@ commands:
         /track location <locationName> - Segui delle coordinate salvate sul server
         /track new <X> <Z> - Segui le coordinate X, Z
         /track stop - Ferma il navigatore
+      permission: perm.general
+   Thanks:
+      aliases: [grazie, grz, ty]
+      description: Ringrazia un giocatore
+      usage:  |
+        /thanks
+        /grazie
+        /grz
+        /ty
       permission: perm.general
 permissions:
    perm.general:
