--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
-api: MySpigotPluginAPI
-name: MySpigotPlugin
-main: plugin.spigot.defaultpackage.Main
-version: "9.0.0"
+api: LARSpigotPluginAPI
+name: LARSpigotPlugin
+main: lar.spigot.plugin.Main
+version: "10.0.0"
 api-version: 1.19
 authors: [Alberto Rutigliano, Luca Acquafredda]
 website: https://github.com/AlbertoRutigliano/MinecraftPluginDev
