--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
         server: 185.25.206.75
         username: multicraft
         password: ${{ secrets.FTP_PASSWORD }}
-        protocol: SFTP
+        protocol: ftps-legacy
         port: 22
         server-dir: provola/
