--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,19 @@
-on: push
-name: 🚀 Deploy website on push
+on: [push]
+
 jobs:
-  web-deploy:
-    name: 🎉 Deploy
+  upload_files:
     runs-on: ubuntu-latest
+    name: Upload a builded file.
     steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v3
-    
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+    - name: Checkout
+      uses: actions/checkout@v2.3.4
+    - name: Upload Files
+      id: upload
+      uses: Creepios/sftp-action@v1.0.3
       with:
-        server: 185.25.206.75
-        username: multicraft
-        password: ${{ secrets.FTP_PASSWORD }}
-        protocol: ftps
+        host: '185.25.206.75'
         port: 22
-        server-dir: provola/
-        timeout: 60000
-        dry-run: true
+        username: 'multicraft'
+        password: ${{ secrets.FTP_PASSWORD }}
+        localPath: './pom.xml'
+        remotePath: './provola'
