--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,13 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    - name: Build with Maven
+      run: mvn clean install
     - name: Upload Files
       id: upload
       uses: Creepios/sftp-action@v1.0.3
@@ -16,4 +23,4 @@ jobs:
         username: 'multicraft'
         password: ${{ secrets.FTP_PASSWORD }}
         localPath: './pom.xml'
-        remotePath: './provola'
+        remotePath: './multicraftServer/servers/svil/plugins'
