--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn clean package
     - name: Upload Files
       id: upload
       uses: Creepios/sftp-action@v1.0.3
