--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,11 @@ jobs:
         distribution: 'temurin'
     - name: Build with Maven
       run: mvn clean package
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: 'LARSpigotPlugin'
+        path: './'
     - name: Upload Files
       id: upload
       uses: Creepios/sftp-action@v1.0.3
@@ -22,5 +27,5 @@ jobs:
         port: 22
         username: 'multicraft'
         password: ${{ secrets.FTP_PASSWORD }}
-        localPath: './home/runner/work/MinecraftPluginDev/MinecraftPluginDev/target/'
+        localPath: './LARSpigotPlugin'
         remotePath: './multicraftServer/servers/svil/plugins/'
