--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
         port: 22
         username: 'multicraft'
         password: ${{ secrets.FTP_PASSWORD }}
-        localPath: './LARSpigotPlugin'
+        localPath: './target/LARSpigotPlugin/'
         remotePath: './multicraftServer/servers/svil/plugins/'
