--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,11 @@
     	<artifactId>commons-csv</artifactId>
     	<version>1.8</version>
 	</dependency>
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.12.0</version>
+	</dependency>
+		
   </dependencies>
 </project>
