--- a/.github/workflows/manual-dev-deploy.yml
+++ b/.github/workflows/manual-dev-deploy.yml
@@ -13,6 +13,9 @@ jobs:
         distribution: 'temurin'
     - name: Build with Maven
       run: mvn --batch-mode --update-snapshots package
+    - name: Get version
+      run: |
+        echo "RELEASE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
     - run: mkdir staging && cp target/*.jar staging
     - name: Upload Files
       id: upload
