Added new messages

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -10,6 +10,21 @@ PLAYER_JOIN:
     - "%3$sBentornato coglioncino %2$s%1$s%3$s" 
     - "%3$sWe u rknnidd %2$s%1$s%3$s"
     - "%3$sWe u strunz %2$s%1$s%3$s!"
+    - "%2$s%1$s%3$s è arrivato, preparate i pop-corn!"
+    - "%2$s%1$s%3$s è tra noi, chi l'ha chiamato?"
+    - "%3$sBenvenuto %2$s%1$s%3$s, e chi cazzo sei?"
+    - "%3$sEhi %2$s%1$s%3$s, bentornato, pezzo di merda!"
+    - "%3$sSalutiamo tutti %2$s%1$s%3$s, anche se nessuno vuole!"
+    - "%3$sAttenzione, %2$s%1$s%3$s è qui, nascondetevi!"
+    - "%3$sFinalmente sei qui %2$s%1$s%3$s, ci mancava un altro stronzo!"
+    - "%3$s%2$s%1$s%3$s, siamo felici di rivederti... per modo di dire!"
+    - "%3$sRagazzi, %2$s%1$s%3$s è tornato, che sfiga!"
+    - "%3$sSalve %2$s%1$s%3$s, buona permanenza, idiota!"
+    - "%3$sOcchi aperti, %2$s%1$s%3$s è qui, che rottura di coglioni!"
+    - "%3$sDiamo il benvenuto a %2$s%1$s%3$s, come se ci servisse!"
+    - "%3$sFate spazio a %2$s%1$s%3$s, se proprio dovete!"
+    - "%3$s%2$s%1$s%3$s è qui per divertirsi, beato lui!"
+    - "%3$sSorpresa! %2$s%1$s%3$s è qui, che cazzo di gioia... no!"
 PLAYER_LEFT:
     - "%2$s%1$s%3$s è scappato via"
     - "%2$s%1$s%3$s è uscito"
@@ -17,6 +32,21 @@ PLAYER_LEFT:
     - "%2$s%1$s%3$s aveva qualcosa di meglio da fare"
     - "%2$s%1$s%3$s si sta andando a fare un trimone"
     - "%2$s%1$s%3$s è uscito dal gioco. Pace all'anima sua"
+    - "%2$s%1$s%3$s è scappato come un vigliacco!"
+    - "%2$s%1$s%3$s è uscito, finalmente una buona notizia!"
+    - "%2$s%1$s%3$s ha deciso di andarsene, meno male!"
+    - "%2$s%1$s%3$s aveva qualcosa di meglio da fare, che stronzo!"
+    - "%2$s%1$s%3$s se ne va a fare in culo!"
+    - "%2$s%1$s%3$s è uscito dal gioco, che lo fotta!"
+    - "%2$s%1$s%3$s ci ha abbandonato, buon per noi!"
+    - "%2$s%1$s%3$s è fuggito, il codardo!"
+    - "%2$s%1$s%3$s ha lasciato il gioco, che se ne vada affanculo!"
+    - "%2$s%1$s%3$s ha mollato, che pezzo di merda!"
+    - "%2$s%1$s%3$s ha deciso di levarsi dai coglioni!"
+    - "%2$s%1$s%3$s è sparito, finalmente!"
+    - "%2$s%1$s%3$s è uscito, non mancherà a nessuno!"
+    - "%2$s%1$s%3$s è andato a farsi fottere!"
+    - "%2$s%1$s%3$s ci ha lasciato, pace all'anima sua... stronzetto!"
 SLEEP:
     - "%2$s%1$s%3$s sta dormendo"
     - "%2$s%1$s%3$s sà mìs a dorm"
@@ -27,8 +57,38 @@ SLEEP:
     - "%2$s%1$s%3$s sta già contando le pecorelle"
     - "%2$s%1$s%3$s ste già jind u litt"
     - "%2$s%1$s%3$s sta già sotto le coperte"
+    - "%2$s%1$s%3$s è andato a fare il pigro di merda"
+    - "%2$s%1$s%3$s si è buttato a letto come un coglione"
+    - "%2$s%1$s%3$s sta dormendo, il fancazzista"
+    - "%2$s%1$s%3$s s'è messo a dormire, che pippa!"
+    - "%2$s%1$s%3$s è andato a russare come un maiale"
+    - "%2$s%1$s%3$s è a letto, che sfigato!"
+    - "%2$s%1$s%3$s dorme come un bamboccio"
+    - "%2$s%1$s%3$s sta già russando come un vecchio porco"
+    - "%2$s%1$s%3$s sta già contando le pecorelle, che tenero stronzo"
+    - "%2$s%1$s%3$s è già nel letto, che palle!"
+    - "%2$s%1$s%3$s si è ficcato sotto le coperte, che vigliacco!"
+    - "%2$s%1$s%3$s ste già jind u litt, lo stronzo!"
+    - "%2$s%1$s%3$s è sotto le coperte, pigro di merda!"
+    - "%2$s%1$s%3$s è andato a fare il morto a letto!"
+    - "%2$s%1$s%3$s è andato a fare il belinone sotto le coperte!"
 CANT_SLEEP:
     - "%2$s%1$s%3$s non può dormire per colpa dei mostri"
+    - "%2$s%1$s%3$s non può dormire, i mostri lo spaventano!"
+    - "%2$s%1$s%3$s non riesce a dormire, che fifone di merda!"
+    - "%2$s%1$s%3$s ha paura dei mostri, povero sfigato!"
+    - "%2$s%1$s%3$s è sveglio per colpa dei mostri, che cazzone!"
+    - "%2$s%1$s%3$s non dorme, i mostri glielo impediscono!"
+    - "%2$s%1$s%3$s non riesce a chiudere occhio, vigliacco!"
+    - "%2$s%1$s%3$s è terrorizzato dai mostri, che pippa!"
+    - "%2$s%1$s%3$s non può dormire, che sfigato!"
+    - "%2$s%1$s%3$s è bloccato dai mostri, che palle!"
+    - "%2$s%1$s%3$s non riesce a dormire per colpa dei mostri, che perdente!"
+    - "%2$s%1$s%3$s ha troppa paura dei mostri, povero coglione!"
+    - "%2$s%1$s%3$s non può dormire, che cacasotto!"
+    - "%2$s%1$s%3$s è sveglio perché i mostri lo spaventano!"
+    - "%2$s%1$s%3$s non riesce a dormire, mostri ovunque!"
+    - "%2$s%1$s%3$s è sveglio, i mostri lo tengono sveglio!"
 GET_DAMAGE:
     - "%2$s%1$s%3$s ti ha inchiappettato"
     - "%2$s%1$s%3$s ti ha dato una botta"
@@ -36,11 +96,41 @@ GET_DAMAGE:
     - "%2$s%1$s%3$s ti ha fatto la bua"
     - "%2$s%1$s%3$s ha voglia di te"
     - "%2$s%1$s%3$s te le sta dando di santa ragione!"
+    - "%2$s%1$s%3$s ti ha preso a calci nel culo!"
+    - "%2$s%1$s%3$s ti ha spaccato la faccia!"
+    - "%2$s%1$s%3$s ti sta facendo il culo a strisce!"
+    - "%2$s%1$s%3$s ti ha fatto un bel male!"
+    - "%2$s%1$s%3$s ti ha dato una legnata nei denti!"
+    - "%2$s%1$s%3$s ti sta pestando come un cane!"
+    - "%2$s%1$s%3$s ti ha fatto vedere le stelle!"
+    - "%2$s%1$s%3$s ti sta riempiendo di botte!"
+    - "%2$s%1$s%3$s ti ha fatto il culo a tarallo!"
+    - "%2$s%1$s%3$s ti ha menato come si deve!"
+    - "%2$s%1$s%3$s ti ha rotto il culo!"
+    - "%2$s%1$s%3$s ti ha fatto un mazzo tanto!"
+    - "%2$s%1$s%3$s ti sta fracassando le ossa!"
+    - "%2$s%1$s%3$s ti sta sfracellando!"
+    - "%2$s%1$s%3$s ti sta demolendo a suon di botte!"
 WAKE_UP:
     - "%2$s%1$s%3$s bastardo si è alzato"
     - "%2$s%1$s%3$s si è svegliato di soprassalto"
     - "%2$s%1$s%3$s s'alzat"
     - "%2$s%1$s%3$s si è alzato per bere un bicchiere d'acqua"
+    - "%2$s%1$s%3$s, il bastardo si è svegliato!"
+    - "%2$s%1$s%3$s si è alzato, finalmente!"
+    - "%2$s%1$s%3$s s'è svegliato, che palle!"
+    - "%2$s%1$s%3$s si è alzato dal letto, che coglione!"
+    - "%2$s%1$s%3$s si è svegliato, il dormiglione di merda!"
+    - "%2$s%1$s%3$s s'è alzato, non ci posso credere!"
+    - "%2$s%1$s%3$s ha finalmente deciso di svegliarsi, che stronzo!"
+    - "%2$s%1$s%3$s si è alzato, era ora!"
+    - "%2$s%1$s%3$s si è svegliato, che rottura!"
+    - "%2$s%1$s%3$s s'è alzato, che miracolo!"
+    - "%2$s%1$s%3$s è uscito dal letto, chi l'avrebbe detto?"
+    - "%2$s%1$s%3$s è sveglio, e chi cazzo l'ha chiesto?"
+    - "%2$s%1$s%3$s si è alzato per fare un cazzo!"
+    - "%2$s%1$s%3$s ha smesso di fare il morto, finalmente!"
+    - "%2$s%1$s%3$s è in piedi, che stronzata!"
 GOOD_MORNING:
     - "Buongiorno trimone"
     - "Buongiorno cazzone"
@@ -50,6 +140,21 @@ GOOD_MORNING:
     - "Buongiorno principessa!"
     - "Il buongiorno si vede dal mattino"
     - "Buongiorno col cazzo duro"
+    - "Buongiorno stronzo!"
+    - "Buongiorno, pezzo di merda!"
+    - "Buongiorno, fancazzista!"
+    - "Buongiorno coglione, sveglia!"
+    - "Buongiorno, rompicoglioni!"
+    - "Buongiorno testa di cazzo!"
+    - "Ehilà, buongiorno scassapalle!"
+    - "Buongiorno, pirla!"
+    - "Buongiorno, svegliati che già fai schifo!"
+    - "Buongiorno un corno, rompicoglioni!"
+    - "Buongiorno, rincoglionito!"
+    - "Buongiorno, il giorno più brutto della tua vita è iniziato!"
+    - "Buongiorno, che ti venga un accidente!"
+    - "Buongiorno, coglione del cazzo!"
+    - "Buongiorno, e che ti parta un embolo!"
 ENCHANTMENT:
     - "%3$sIl bastardo %2$s%1$s%3$s ha incantato un oggetto"
     - "%2$s%1$s%3$s è un bastardo perchè ha incantato un oggetto"
@@ -57,6 +162,21 @@ ENCHANTMENT:
     - "%3$sFormidabile bastardo %2$s%1$s%3$s ha incantato un oggetto"
     - "%3$sAwuand u figgj d bughibù %2$s%1$s%3$s ha incantato un oggetto"
     - "%2$s%1$s%3$s che cazzo hai incantato!?"
+    - "%3$sIl figlio di buona donna %2$s%1$s%3$s ha incantato un altro cazzo di oggetto"
+    - "%2$s%1$s%3$s, quel bastardo, ha incantato qualcosa!"
+    - "%3$sBravo stronzo %2$s%1$s%3$s, un altro incantamento"
+    - "%3$sChe gran figlio di puttana %2$s%1$s%3$s, ha incantato di nuovo"
+    - "%3$sU malavit %2$s%1$s%3$s ha incantato un altro oggetto, che palle!"
+    - "%2$s%1$s%3$s, che cazzo hai combinato adesso con quell'incantesimo!?"
+    - "%3$sMa vaffanculo %2$s%1$s%3$s, un altro oggetto incantato!"
+    - "%2$s%1$s%3$s ha incantato qualcosa, che coglione!"
+    - "%3$sIl pezzo di merda %2$s%1$s%3$s ha fatto un altro incantesimo"
+    - "%3$sNon ci posso credere, %2$s%1$s%3$s ha incantato di nuovo!"
+    - "%3$sEcco il cazzone %2$s%1$s%3$s, ha incantato un oggetto"
+    - "%3$sIl solito bastardo %2$s%1$s%3$s ha incantato qualcosa"
+    - "%3$sU strunz %2$s%1$s%3$s ha incantato un altro oggetto"
+    - "%2$s%1$s%3$s, quanto sei stronzo con questi incantesimi!"
+    - "%3$sChe sorpresa, %2$s%1$s%3$s ha incantato un oggetto, ma vaffanculo!"
 IN_NETHER:
     - "%2$s%1$s%3$s è entrato nel %4$sNether"
 IN_OVERWORLD:
